--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -235,7 +235,7 @@ button {
 }
 
 .introducao h1{
-    font-size: 12vw;
+    font-size: 13vw;
     padding: 4vh 0 2vh 0;
     font-family: 'Rajdhani-b';
 }
@@ -280,7 +280,7 @@ button {
 
 .principios h6 {
     color: white;
-    font-size: 12vw;
+    font-size: 13vw;
     padding: 2vh 0 4vh 0;
 }
 
@@ -324,7 +324,7 @@ button {
 
 .funcao p{
     font-family: 'Rajdhani-b';
-    font-size: 12vw;
+    font-size: 13vw;
     padding: 0 0 0 1vh;
 }
 
@@ -370,7 +370,7 @@ button {
 
 .negocio p{
     font-family: 'Rajdhani-b';
-    font-size: 12vw;
+    font-size: 13vw;
     color: #FFF;
     padding: 4vw 0 0 0vw;
 }
@@ -437,7 +437,7 @@ button {
 
 .impacto p {
     font-family: 'Rajdhani-b';
-    font-size: 12vw;
+    font-size: 13vw;
     color: #000000;
     padding: 4vw 0 0 1vh;
 }
@@ -457,16 +457,74 @@ button {
 .container-impacto div{ 
     background-color: white;
     padding: 5vw;
-    display: flex;
+    display: grid;
+    grid-template-columns: 10% 90% ;
+    grid-template-areas: 
+        "a b "
+        "c d ";
     border-radius: 12px;
     color: #011F27;
     font-size: 5vw;
+    cursor: pointer;
 }
 
 .container-impacto div h1:nth-child(1){
-    width: 15vw;
+    grid-area: a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.container-impacto div h1:nth-child(1){
-    width: 15vw;
+.container-impacto div h1:nth-child(2){
+    grid-area: b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+div #invisivel{
+    gap: 5vw;
+    width: 80vw;
+    display: none; /* Esconde o elemento inicialmente */
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+div #invisivel.mostrar {
+    display: flex;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+#invisivel hr{
+    grid-area: c;
+    width: 2vw;
+    background-color: #000;
+    border: none;
+
+}
+
+#invisivel b{
+    grid-area: d;
+    width: 70vw;
+    font-size: 5vw;
+    color: #011F27;
+}
+
+b .red{
+    color: #FF2600;
+}
+
+b .green{
+    color: #28A745;
+}
+
+#invisivel b button{
+    color: #011F27;
+    font-size: 6vw;
+    padding: 0 4vw 0 4vw;
+    border: solid 2px black;
+    border-radius: 12px;
+    font-family: 'Rajdhani-b';
 }
