--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -533,21 +533,170 @@ b .green{
 }
 /* FIM IMPACTO */
 /* INICIO SIMULADOR */
-.simulador{
+/* Estilos Gerais */
+.simulador {
     background-color: #D9D9D9;
     padding: 1vh;
 }
 
-.simulador p{
+.simulador p {
     font-family: 'Rajdhani-b';
     font-size: 13vw;
     color: #000000;
     padding: 0 0 0 1vh;
 }
 
-.simulador h6{
-
+.calculadora {
+    background: #E5E5E5;
+    padding: 20px;
+    border-radius: 5px;
 }
+
+.calculadora h1 {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.calculadora label {
+    display: block;
+    font-size: 16px;
+    margin-top: 10px;
+    font-weight: normal;
+}
+
+.calculadora input {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: #F0F0F0;
+    color: #000;
+}
+
+.calculadora button {
+    background-color: #00171F;
+    color: white;
+    border: none;
+    padding: 12px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 15px;
+    align-items: center;
+}
+
+.calculadora button:hover {
+    background-color: #00334E;
+}
+
+.resultados, .beneficios, .comparativo { 
+    margin-top: 20px; 
+    padding: 15px; 
+}
+
+.beneficios { 
+    display: none; 
+}
+
+.economia { 
+    font-weight: bold; 
+    color: green; 
+}
+
+table { 
+    width: 100%; 
+    border-collapse: collapse; 
+    margin-top: 10px; 
+    background-color: #2C3E50;
+    color: #FFFFFF;
+}
+
+th, td { 
+    border: 1px solid #ddd; 
+    padding: 10px; 
+    text-align: center; 
+}
+
+th { 
+    background-color: #2C3E50; 
+}
+
+.positivo { 
+    color: green; 
+    font-weight: bold; 
+}
+
+.negativo { 
+    color: red; 
+    font-weight: bold; 
+}
+@media (max-width: 768px) {
+    .simulador p {
+        font-size: 20vw;
+    }
+
+    .calculadora h1 {
+        font-size: 24px;
+    }
+
+    .calculadora input, .calculadora button {
+        font-size: 14px;
+        padding: 10px;
+    }
+
+    .calculadora button {
+        font-size: 16px;
+    }
+
+    table {
+        font-size: 12px;
+    }
+
+    .beneficios {
+        display: block;
+    }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+    .simulador p {
+        font-size: 10vw;
+    }
+
+    .calculadora h1 {
+        font-size: 26px;
+    }
+
+    .calculadora input, .calculadora button {
+        font-size: 16px;
+    }
+
+    table {
+        font-size: 14px;
+    }
+}
+
+@media (min-width: 1025px) {
+    .simulador p {
+        font-size: 3vw;
+    }
+
+    .calculadora h1 {
+        font-size: 32px;
+    }
+
+    .calculadora input, .calculadora button {
+        font-size: 18px;
+    }
+
+    table {
+        font-size: 16px;
+    }
+}
+
 /* FIM SIMULADOR */
 /* INICIO CONTATO */
 .contato{
