arrumado table para Desktop

--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -613,7 +613,6 @@ table {
 
 th, td { 
     border: 1px solid #ddd; 
-    padding: 10px; 
     text-align: center; 
 }
 
@@ -679,6 +678,10 @@ th {
 
     table {
         font-size: 16px;
+    }
+
+    th, td {
+        padding: 20px;
     }
 }
 
