adicionar imagem ao lado do texto de segmento no desktop

--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -985,8 +985,13 @@ form button{
             margin-bottom: 5%;
         }
 
+        & .div_img{
+            display: flex;
+        }
+
         & .div_img img{
             width: 25vw;
+            display: flex;
         }
     }
 
