--- a/public/assets/styles/login.css
+++ b/public/assets/styles/login.css
@@ -194,6 +194,7 @@
         align-content: space-evenly; 
         align-self: center;  
         justify-self: center;
+        box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.5);
     }
 
     .left-container {
@@ -363,7 +364,7 @@
 
     .box-logo img {
         height: 300px;
-        width: 300px;
+        width: 350px;
     }
 
     .box-nomeEmpresa {
