--- a/public/assets/styles/monitoramento.css
+++ b/public/assets/styles/monitoramento.css
@@ -29,6 +29,7 @@ body{
     background-color: #011F27;
     flex-direction: column;
     justify-content: flex-start;
+    z-index: 1000;
 }
 
 .nav-burger{
@@ -53,13 +54,13 @@ body{
 
 /*  */
 .linha1-active{
-    transform: translateY(1vw) rotate(225deg);
+    transform: rotate(44deg);
     transition: 0.7s;  
     cursor: pointer;
 }
 
 .linha3-active{
-    transform: rotate(45deg);
+    transform: rotate(360deg);
     transition: 0s;
     opacity: 0%;
     cursor: pointer;
@@ -68,7 +69,7 @@ body{
 .linha2-active{
     transform:rotate(-60deg);
     transition: 0.7s;
-    transform: translateY(-1vw) rotate(-225deg);
+    transform: translateY(-1vw) rotate(135deg);
     cursor: pointer;
 }
 /*  */
@@ -118,10 +119,6 @@ body{
     padding: 2vw;
 }
 
-.cabeca div h3{
-    font-size: 3vw;
-}
-
 .cabeca div i{
     font-size: 9vw;
 }
@@ -130,12 +127,14 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 3vw;
 }
 
 .persona{
     display: flex;
     flex-direction: row;
     align-items: center;
+    font-size: 2vw;
 }
 /* Grid B */
 /* Grid C */
@@ -144,6 +143,8 @@ body{
     margin-top: 3vw;
     font-family: 'Montserrat';
     grid-area: c;
+    position: relative;
+    bottom: 15vw;
 }
 
 .box{
@@ -188,16 +189,30 @@ div .servidor select{
     border-radius: 12px;
     padding: 0 4vw 0 4vw;
 }
-
+/* Parte das Dashboards */
 .monitoramento{
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 5vw;
-    width: 100%;
+}
+/* Lado esquerdo das dash (referencia do figma) */
+.esquerda{
+    display: flex;
+    gap: 5vw;
+    flex-direction: column;
+}
+/* Lado direito das dash (referencia do figma) */
+.direita{
+    display: flex;
+    gap: 5vw;
+    flex-direction: column;
 }
 
+/* Estilo dos gráficos */
 .chart-container-cpu{
-    background-color: #04708D;
+    background: #012027;
+    background: linear-gradient(270deg, #012027, #04708D);
     border-radius: 12px;
     padding: 2vw;
 }
@@ -207,13 +222,13 @@ div .servidor select{
     font-weight: 100;
 }
 
-.chart-container-ram{
+.chart-container-ram, .chart-container-disco{
     background-color: #D9D9D9;
     border-radius: 12px;
     padding: 2vw;
 }
 
-.chart-container-ram h2{
+.chart-container-ram h2, .chart-container-disco h2{
     color: black;
     font-weight: 100;
 }
@@ -222,6 +237,7 @@ div .servidor select{
     background-color: #D9D9D9;
     border-radius: 12px;
     padding: 2vw;
+    height: 50vw;
 }
 
 .chart-container-rede h2{
@@ -232,16 +248,18 @@ div .servidor select{
 .chart-wrapper {
     display: flex;
     flex-direction: row;
-    gap: 12vw;
-
+    padding: 3vw;
+    justify-content: space-between;
 }
 
 .chart-wrapper div{
     width: 30vw;
     height: 30vw;
-    background-color: #04708D;
+    background: #012027;
+    background: linear-gradient(270deg, #012027, #04708D);
+    border-radius: 12px;
 }
-
+/* Menu que se expande */
 @media only screen and (min-width: 1024px) { 
 
     .menu{
@@ -365,4 +383,91 @@ div .servidor select{
     }to{
         width: 5%;
     }
+}
+
+
+#id_valor-ler, #id_valor-esc,
+#id_valor-esc-disco, #id_valor-ler-disco{
+    font-size: 3vw;
+    text-align: center;
+    position: relative;
+    bottom: 15vw;
+    height: 10vw;
+    color: white;
+}
+
+#id_valor-ler span, #id_valor-esc span,
+#id_valor-ler-disco span, #id_valor-esc-disco span{
+    font-weight: 900;
+    font-size: 4vw;
+}
+
+#redeChart-ler, #discoChart-ler
+,#redeChart-esc, #discoChart-esc{
+    position: relative;
+    bottom: 5vw;
+    padding: 2vw;
+    z-index: 999;
+}
+
+#id_valor-disc{
+    text-align: center;
+    position: relative;
+    bottom: 40vw;
+    height: 10vw;
+    color: rgb(0, 0, 0);
+}
+
+#id_valor-disc span{
+    font-weight: 900;
+    font-size: 10vw;
+}
+
+.tempo_atividade{
+    background: #012027;
+    background: linear-gradient(270deg, #012027, #04708D);
+    color: white;
+    padding: 5vw;
+    border-radius: 12px;
+    text-align: center;
+}
+
+.tempo_atividade h1{
+    font-size: 6vw;
+}
+
+/* Continuar responsividade para PC */
+@media (min-width:702px){
+
+    .contain{
+        padding: 1vw;
+    }
+
+    .cabeca {
+        padding: 1vw;
+        justify-content: space-between;
+    }
+
+    .empresa{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 2vw;
+    }
+    
+    .lugar h3{
+        display: flex;
+    }
+
+    .persona{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        font-size: 1vw;
+    }
+    
+    .cabeca div i{
+        font-size: 6vw;
+    }    
+
 }
